# sunbay-softpos-backend

./: .clippy.toml  .env  .env.example  .gitignore  ALL_SERVICES_COMPLETE.md  API_DOCUMENTATION.md  API_IMPLEMENTATION_PLAN.md  API_LAYER_COMPLETE.md  API_LAYER_PROGRESS.md  API_TEST_FINAL_REPORT.md  API_TEST_STATUS.md  BACKEND_COMPILE_SUMMARY.md  BACKEND_COMPLETION_FINAL.md  BACKEND_EXECUTION_STATUS.md  BACKEND_PROJECT_COMPLETE.md  BACKEND_TASK_STATUS.md  BACKEND_TEST_STATUS.md  CROSS_COMPILE_GUIDE.md  CURRENT_PROGRESS.md  CURRENT_SESSION_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  DOCKER_REMOVAL_SUMMARY.md  DTO_COMPLETE.md  EXTENDED_FEATURES_COMPLETE.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SESSION_SUMMARY.md  HANDLER_ANALYSIS_REPORT.md  HSM_CLIENT_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_GUIDE.md  MODELS_COMPLETE.md  MVP_COMPLETE.md  PROGRESS_UPDATE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_FINAL.md  README.md  README_NEW.md  REDIS_CONFIG_GUIDE.md  RELEASE_BUILD_SUCCESS.md  (+37 more)
.cargo/: config.toml
.sqlx/: query-0157abe99a0367621910bce6b9939dfc0d5301ceb6d9b56f5ea775e9b78132c4.json  query-15a24234ded99531cbb18f027c8b04b9b9db25f1fa5c68d3efc36e56cad2d975.json  query-1757b6340c9f35667be334744b3587d3a0ed65cae27312017a5f3a24b2d11a97.json  query-1b71e0ff93371f9aa0b8962d413b5568f4ca1d0ee52ae1da842680bec0abd978.json  query-1cd0ec51c6fcdc329ba43d9bb6342debfc1226d6e634276faef7f828ece6f56c.json  query-254fc78ab72146f9db1b5c42fd9a7572b9d99f52db8d55cd27c180c78c8c563a.json  query-281339df503dff06d1e9047992026c7159882a5926091ed87444e1556d43a194.json  query-2d12f35e03f521107b429a51f1b830a8036644722480ac50b8ddcddbf87b916a.json  query-40030e5ade0e1f2efba72d9216a35f7979c20aa351d2684dcec86d2a906ff902.json  query-4479ed6bbde19b2b092ff6719b9ed6e98042400e8fcece924fa61e88252fd69e.json  query-450c69290e6cdca6f68042a360d9e8a59aed80c3577daeafe993dedadd938715.json  (+33 more)
(+105 files in other folders)
