[package]
name = "sunbay-softpos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid", "macros"], default-features = false }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Security & Crypto
jsonwebtoken = "9.2"
argon2 = "0.5"
ring = "0.17"
rustls = "0.22"
x509-parser = "0.16"
base64 = "0.21"
hex = "0.4"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random
rand = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
prometheus = { version = "0.13", features = ["process"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Rate Limiting
tower_governor = "0.3"
futures = "0.3.31"

[dev-dependencies]
# Testing
proptest = "1.4"
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
